feat: add custom domain configuration for vizionscop3.com
- Add domain-specific forwarding gateway configuration
- Create comprehensive domain setup guide
- Configure DNS and SSL setup instructions
- Support both apex and www subdomain routing

--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -30,5 +30,11 @@
       "rewrite": "/index.html",
       "statusCode": 200
     }
+  },
+  "networking": {
+    "allowedIpRanges": []
+  },
+  "forwardingGateway": {
+    "allowedForwardedHosts": ["vizionscop3.com", "www.vizionscop3.com", "happy-flower-01a5d2404.1.azurestaticapps.net"]
   }
 }
