--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
   },
   "devDependencies": {
     "@azure/static-web-apps-cli": "^2.0.6",
+    "@testing-library/jest-dom": "^6.7.0",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
