fix: resolve all TypeScript compilation errors and ESLint warnings
Security Enhancements:
- Added comprehensive credentials and sensitive files to .gitignore
- Include API keys, certificates, database files, and cloud credentials

TypeScript Fixes:
- Fixed cache.ts: Added type assertion for memoize function return
- Fixed errorHandling.tsx: Prefixed unused parameter with underscore
- Fixed tests/setup.ts: Added global type declaration for Node.js compatibility

ESLint Compliance:
- Added eslint-disable-next-line no-console for development logging
- Fixed all no-unused-vars violations
- Maintained code quality standards

All GitHub Actions TypeScript compilation errors are now resolved

--- a/.gitignore
+++ b/.gitignore
@@ -49,6 +49,57 @@ coverage/
 *.lcov
 .nyc_output
 
+# Credentials and sensitive files
+*.key
+*.pem
+*.p12
+*.pfx
+*.crt
+*.cer
+*.csr
+*.keystore
+.azure/
+.aws/
+azure-credentials.json
+credentials.json
+service-account.json
+firebase-adminsdk*.json
+config/credentials.yml
+config/master.key
+config/database.yml
+.env.*.local
+secrets.json
+appsettings.Production.json
+appsettings.Staging.json
+.secrets
+*.secret
+
+# API Keys and tokens
+.api-keys
+api-keys.json
+tokens.json
+.token
+access_token
+refresh_token
+client_secret.json
+
+# Database files
+*.db
+*.sqlite
+*.sqlite3
+*.db3
+
+# Backup files
+*.backup
+*.bak
+*.tmp
+*.temp
+
+# Local configuration overrides
+local.settings.json
+.local/
+config.local.json
+
 # node-waf configuration
 .lock-wscript
 
