fix: Phase 2 dependency conflict - comprehensive solution
 Applied multiple dependency fixes:
- Locked @react-three/drei to exact version 10.6.0 (no caret)
- Added resolutions field to force version 10.6.0
- Enhanced workflow with manual build process
- Added Node.js setup and legacy-peer-deps flag
- Skip Azure SWA auto-build since we build manually
- Use npm ci --legacy-peer-deps for reliable installs

This mirrors the successful Phase 1 approach and should resolve the React 18 vs React 19 peer dependency conflict.

--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
   ],
   "author": "Your Name",
   "license": "MIT",
+  "resolutions": {
+    "@react-three/drei": "10.6.0"
+  },
   "dependencies": {
-    "@react-three/drei": "^10.6.0",
+    "@react-three/drei": "10.6.0",
     "@react-three/fiber": "^9.3.0",
     "@react-three/postprocessing": "^3.0.4",
     "clsx": "^2.1.0",
