--- a/.github/workflows/azure-static-web-apps-phase-2-scene.yml
+++ b/.github/workflows/azure-static-web-apps-phase-2-scene.yml
@@ -19,6 +19,19 @@ jobs:
         with:
           submodules: true
           lfs: false
+      
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+          cache: 'npm'
+      
+      - name: Install dependencies with legacy peer deps
+        run: npm ci --legacy-peer-deps
+      
+      - name: Build application
+        run: npm run build
+      
       - name: Build And Deploy
         id: builddeploy
         uses: Azure/static-web-apps-deploy@v1
@@ -31,6 +44,7 @@ jobs:
           app_location: '/' # App source code path
           api_location: '' # Api source code path - optional
           output_location: 'dist' # Built app content directory - optional
+          skip_app_build: true # We're building manually above
           ###### End of Repository/Build Configurations ######
 
   close_pull_request_job:
