--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@react-three/postprocessing": "^3.0.4",
     "clsx": "^2.1.0",
     "framer-motion": "^12.23.12",
-    "lucide-react": "^0.344.0",
+    "lucide-react": "latest",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^6.8.1",
@@ -46,7 +46,7 @@
   "devDependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.7.0",
-    "@testing-library/react": "^16.3.0",
+    "@testing-library/react": "latest",
     "@testing-library/user-event": "^14.6.1",
     "@types/node": "^24.3.0",
     "@types/react": "^19.0.0",
