--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "npm run seo:generate && tsc && vite build",
+    "build:prod": "npm run clean && npm run seo:generate && tsc && vite build --mode production",
+    "build:analyze": "npm run build:prod && npx vite-bundle-analyzer dist/stats.html",
+    "clean": "rimraf dist",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "eslint . --ext ts,tsx --fix",
     "preview": "vite preview",
@@ -65,9 +68,13 @@
     "lint-staged": "^15.2.2",
     "postcss": "^8.4.35",
     "prettier": "^3.2.5",
+    "rimraf": "^6.0.1",
     "tailwindcss": "^3.4.1",
+    "terser": "^5.43.1",
     "typescript": "^5.2.2",
     "vite": "^5.1.4",
+    "vite-plugin-compression": "^0.5.1",
+    "vite-plugin-pwa": "^1.0.3",
     "vitest": "^1.3.1"
   },
   "lint-staged": {
