Fix GitHub Actions deployment issues: missing functions, array validation, and workflow conflicts
- Add missing calculatePhaseProgress and getPhaseData functions to phaseManager.ts
- Fix PhaseIndicator.tsx to handle undefined phases array with proper validation
- Fix PhaseTransition.tsx to handle optional onTransitionEnd prop with type check
- Disable phase-deployment.yml workflow for phase-4-advanced-features branch to prevent conflicts
- Apply fixes to both phase-feature directories for consistency

--- a/.github/workflows/phase-deployment.yml
+++ b/.github/workflows/phase-deployment.yml
@@ -3,12 +3,18 @@ name: Phase-Based Deployment
 on:
   push:
     branches:
-      - 'phase-*'
+      - 'phase-1-*'
+      - 'phase-2-*'
+      - 'phase-3-*'
+      # Excluding phase-4-advanced-features - it has its own workflow
       - 'feature/*'
   pull_request:
     types: [opened, synchronize, reopened, closed]
     branches:
-      - 'phase-*'
+      - 'phase-1-*'
+      - 'phase-2-*'
+      - 'phase-3-*'
+      # Excluding phase-4-advanced-features - it has its own workflow
       - 'feature/*'
 
 jobs:
