--- a/package.json
+++ b/package.json
@@ -30,20 +30,20 @@
   "author": "Your Name",
   "license": "MIT",
   "resolutions": {
-    "@react-three/drei": "10.6.0"
+    "@react-three/drei": "^9.88.13"
   },
   "dependencies": {
-    "@react-three/drei": "10.6.0",
-    "@react-three/fiber": "^9.3.0",
-    "@react-three/postprocessing": "^3.0.4",
+    "@react-three/drei": "^9.88.13",
+    "@react-three/fiber": "^8.15.19",
+    "@react-three/postprocessing": "^2.16.2",
     "clsx": "^2.1.0",
     "framer-motion": "^12.23.12",
     "lucide-react": "latest",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-router-dom": "^6.8.1",
     "tailwind-merge": "^2.2.1",
-    "three": "^0.179.1",
+    "three": "^0.160.1",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
@@ -52,9 +52,9 @@
     "@testing-library/react": "latest",
     "@testing-library/user-event": "^14.6.1",
     "@types/node": "^24.3.0",
-    "@types/react": "^19.0.0",
-    "@types/react-dom": "^19.0.0",
-    "@types/three": "^0.179.0",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "@types/three": "^0.160.0",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "@vitejs/plugin-react": "^4.2.1",
