--- a/.github/workflows/azure-minimal-deploy.yml
+++ b/.github/workflows/azure-minimal-deploy.yml
@@ -37,9 +37,9 @@ jobs:
         with:
           azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN_PORTFOLIO_V2_PHASE_4_FEATURES }}
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          action: "upload"
-          app_location: "/"
-          output_location: "dist"
+          action: 'upload'
+          app_location: '/'
+          output_location: 'dist'
           skip_app_build: true
 
       - name: Success notification
