Fix MIME type issue in Azure Static Web Apps
- Added proper MIME type mappings for JS/TS files
- Fixed navigation fallback to exclude src folder
- Prevents HTML being served for module scripts
- Resolves 'Expected JavaScript but got HTML' error

--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -1,6 +1,12 @@
 {
   "routes": [
     {
+      "route": "/src/*",
+      "headers": {
+        "Content-Type": "application/javascript"
+      }
+    },
+    {
       "route": "/assets/*",
       "headers": {
         "Cache-Control": "public, max-age=31536000, immutable"
@@ -13,10 +19,14 @@
   ],
   "navigationFallback": {
     "rewrite": "/index.html",
-    "exclude": ["/assets/*", "/images/*", "/*.{png,jpg,gif,ico,svg,css,js,json}"]
+    "exclude": ["/assets/*", "/images/*", "/src/*", "/*.{png,jpg,gif,ico,svg,css,js,json,ts,tsx,jsx}"]
   },
   "mimeTypes": {
-    ".json": "application/json"
+    ".json": "application/json",
+    ".js": "application/javascript",
+    ".mjs": "application/javascript",
+    ".ts": "application/typescript",
+    ".tsx": "application/typescript"
   },
   "globalHeaders": {
     "X-Content-Type-Options": "nosniff",
